--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,11 @@
 /* google fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
-
 /* CSS RESET */
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Poppins' sans-serif;
+	font-family: 'Roboto Slab', serif;
 	scroll-behavior: smooth;
 }
 
@@ -74,7 +72,6 @@
 }
 .header nav ul li {
 	list-style: none;
-	padding: 5px;
 }
 .header nav ul li a {
 	display: inline-block;
@@ -85,19 +82,18 @@
 	font-weight: 400;
 	font-size: 15px;
 	letter-spacing: 0.6px;
-	transition: all 0.4s;
 }
 .header nav ul li a i {
 	margin-right: 10px;
 	font-size: 18px;
-	transition: all 0.4s;
+	transition: 0.4s;
 }
 
-.header nav ul li a:hover {
-	color: var(--themeColor);
+.header nav ul li a:hover i {
+	background-color: var(--themeColor);
 }
 .header nav ul li a.active i {
-	color: #33dff2;
+	color: var(--themeColor);
 }
 
 /*  ===== header footer  ====== */
@@ -295,6 +291,7 @@ main {
 #about .about-col .info-col p {
 	color: var(--textColor);
 	font-size: 15px;
+	font-weight: 800;
 	letter-spacing: 0.5px;
 	font-style: italic;
 }
@@ -759,6 +756,7 @@ main {
 #contacts {
 	padding: 70px 30px;
 	background-color: #fff;
+	margin-bottom: 100px;
 }
 #contacts .contacts-row {
 	margin-top: 50px;
@@ -885,7 +883,7 @@ main {
 
 #contacts .contacts-row .contacts-rifht {
 	flex-basis: 60%;
-	/* min-width: 60%; */
+	min-width: 60%;
 	background-color: white;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 20%);
 	border-radius: 30px;
