--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,8 @@
 }
 .header .profile img {
 	width: 200px;
-	border-radius: 50%;
+	/* height: 250px; */
+	border-radius: 30px;
 	border: 3px solid var(--themeColor);
 }
 
